data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3798.wast
;; 7. **Test: Mixed Valid and Invalid Br_Table Indices**    - **Description**: Compose a `br_table` instruction combining valid and invalid indices, followed by sequential `call` instructions.    - **Constraint**: Evaluate whether invalid indices properly trap and valid indices correctly route control flow, keeping the stack state prepared for `call`s.    - **Edge Case**: Tests mixed scenario handling in `br_table` to confirm stack state consistency for subsequent calls.

(assert_invalid
  (module
    (func $valid_func (result i32)
      (i32.const 42)
    )
    (table funcref (elem $valid_func))
    (type $sig (func (result i32)))
    (func $test
      (block $label0
        (block $label1
          (br_table $label1 $label0)  ;; br_table with valid and invalid (out of bounds) indices
        )
      )
      (call $valid_func)  ;; call after br_table
      (call $valid_func)  ;; second call to check consistency
    )
  )
  "unknown label"
)